--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,3 +8,11 @@ archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+
+# Embedded Ruby inside of fixtures! Neato
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
