Add Admin Users with a Delete link and Destroy action

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ billy:
   name: Billy Manzo
   email: billy@manzo.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling Archer
