--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -24,3 +24,13 @@ micropost_<%= n %>:
   created_at: <%= 42.days.ago %>
   user: billy
 <% end %>
+
+ants:
+  content: "Oh, is that what you want? Because that's how you get ants!"
+  created_at: <%= 2.years.ago %>
+  user: archer
+
+zone:
+  content: "Danger zone!"
+  created_at: <%= 3.days.ago %>
+  user: archer
