--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,1 +1,15 @@
-# empty
+one:
+  follower: billy
+  followed: lana
+
+two:
+  follower: billy
+  followed: malory
+
+three:
+  follower: lana
+  followed: billy
+
+four:
+  follower: archer
+  followed: billy
