--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -34,3 +34,13 @@ zone:
   content: "Danger zone!"
   created_at: <%= 3.days.ago %>
   user: archer
+
+smells:
+  content: "I love fragrances, especially citrus"
+  created_at: <%= 3.days.ago %>
+  user: lana
+
+surname:
+  content: "after my last post I just realized my last name is a good fit"
+  created_at: <%= 2.days.ago %>
+  user: lana
